# wf

./: .gitattributes  .gitignore  Doxyfile  LICENSE  LICENSE.md  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  configure.scan  count.c  count.h  heap.c  heap.h  memory.c  squeeze.c  squeeze.h  trie.c  trie.h  wf.c  wf.h  wf.sh
html/: annotated.html  classes.html  config_8h_source.html  count_8c.html  count_8h.html  count_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  heap_8c.html  heap_8h.html  heap_8h_source.html  index.html  md_LICENSE.html  md_README.html  memory_8c.html  menudata.js  pages.html  squeeze_8c.html  squeeze_8h.html  squeeze_8h_source.html  structHeap-members.html  structHeap.html  structHeapNode-members.html  structHeapNode.html  structJob-members.html  structJob.html  structTrieNode-members.html  structTrieNode.html  todo.html  trie_8c.html  trie_8h.html  trie_8h_source.html  wf_8c.html  wf_8h.html  wf_8h_source.html
html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_2.js  files_0.js  files_3.js  files_4.js  files_5.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
latex/: annotated.tex  count_8c.tex  count_8h.tex  files.tex  heap_8c.tex  heap_8h.tex  md_LICENSE.tex  md_README.tex  memory_8c.tex  refman.tex  squeeze_8c.tex  squeeze_8h.tex  structHeap.tex  structHeapNode.tex  structJob.tex  structTrieNode.tex  todo.tex  trie_8c.tex  trie_8h.tex  wf_8c.tex  wf_8h.tex
sample/: bsd-ls.output  large.output  large.txt  lexiographic-1.input  lexiographic-2.output  lexiographic-2.txt  ligature.input  ligature.output  ligature.txt  mobydick.output  warandpeace.output
