AC_PREREQ([2.69])
AC_INIT([wf], [0.1], [rob@getschmann.net], [], [http://getschmann.net/])

AC_CONFIG_SRCDIR([heap.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC

AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADER_STDBOOL

AC_TYPE_INT32_T
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_CHECK_FUNCS([basename calloc isalpha malloc strdup])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
